# metadada

./: .env  .gitignore  Cargo.toml  Cross.toml  README.md  TODO.md  config.example.toml  config.toml  docker-compose.yaml  justfile
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml  quality.yml
.sqlx/: query-10ba575ddbf981dbdc697e9e988df97642d03eadce40e9ff906fdc914bcd26e2.json  query-1bac2a251460230f893d1116c079286dc1043237150baacdb7a6050745f8d893.json  query-1cf82483aca03c6300ddeb0e9c5e1b663a1186e712688a8b2385391f603c08be.json  query-1def214a3a12bd89b669b979e098c39596735f4074a68b8b816d3ad6449b487a.json  query-241c1faffbf82af56181a57aebae4f3e806c85f62041de24facdf69af7e8fb3d.json  query-2ab05063f9ceab246633bec7bfbf832c9040925bea0a59430865384f2cc86b8a.json  query-2bdb78bcd10b8ab33f29234979ffae7207102da7ce7232aa283c32f63fe76ccc.json  query-3e9036309a56a68fcdc78b92b9b732917a6677c0f10b679828f808a8d0d67c79.json  query-4269e752390271342ae6cf4e1717b4a2e2f7cf0579c20e4c0f1f4336775e6723.json  query-498ba3800a28ec37241fa07833435fd76b9a32caabb1b949153663c86fa5a3ff.json  query-523db979f3c9cb3cd29b005edad32bc5538593153b50913490ede62add9debfc.json  query-591e4d6face617b81dbcd2ac99582319a7b37907ab0c519a4628bfeb583f8157.json  query-62b131495de028522fae4f4f45abd2aa95357eab234a7b0f3782084d6b388ac4.json  query-82250d0168c84a7fcaf7d4c9ee1d425874d1583fa5b456698d4aac4e3e16b011.json  query-9f92b79cbea42d90fafafff55e8469fe3ea39a5957e7800263593d6bbcd56198.json  query-a61882bc2b464bd26ecd11582311c9a7f806f30b52b173e5b2592b7ce0f0d725.json  query-ac31953e497560fa8514ae0d33d23a8f5adbf664a230d2af9a412df0342ce18c.json  query-ac6e8933f23ba6c0ab618e13a9ed06b491743b9fd6db41bb0cfea86e91299fb5.json  query-b40cfb7d0c3eabd152d50c0efd0ffa14520e2a3ba6629047157c462d3e998999.json  query-b9f1d5430c14e033053c004f015142b54105cc65252249a612102aeab88804df.json  query-bf6bc4bd38f82f834dc7db7dc2f88708c39a1a32fd0cd67fa9c3bedaad0cbcfe.json  query-ca7bb3a3923b07fcb60034ef78e56045eb252cfaf0d5bea778f86dba9f6e8b8e.json  query-cfe21cecda4e70cb5370d1a1328d569415374df6156e860886a51c746dc18b88.json  query-d54148671ca4bb9e1b62e70251f705bd7cafcd3ae52a537c6af90a1b0a8d62b4.json  query-d68d6daeb3e2fc41e570953686df7b11d8d218fa1d628c6fb06ef0f2b6da4681.json  query-dbf2b9441cb6fc9b58278d6fd5e1519ff24b95446956502dcbef2b5b9f848230.json  query-e1a029c0088d34e5d30c7c44a918deabdc9fa69db23a490bea1965861e7b6a82.json  query-f23478e072c9e865d158115422ebc0dc5abfe54dcaa58b5039c400303df9950f.json  query-f68a95547f0c7d15c83766945dd30bc75f7b54a5ac34826384ba2a8f490a1223.json  query-fb88890b5372c67c8b39faba32aca7a69aa00f0f8067c6743e51d9de9ca7d7d1.json
crates/mbmeta/: Cargo.toml
crates/mbmeta-api/: Cargo.toml
crates/mbmeta-api/src/: album.rs  artist.rs  error.rs  fingerprints.rs  lib.rs  recent.rs  search.rs
crates/mbmeta-db/: .env  Cargo.toml
crates/mbmeta-db/.sqlx/: query-201ec239268a56aba8fba610578701480e60cde4d5666358bd38a1b1a6092d45.json  query-79893406aa566c85be8aa86454acb173455b190be760a9a564feee3ee2926ff6.json
crates/mbmeta-db/queries/: all_artists.sql  all_release_group.sql  unsynced_artists.sql  unsynced_release_group.sql
crates/mbmeta-db/src/: album.rs  artist.rs  lib.rs
crates/mbmeta-db/src/indexables/: album.rs  artist.rs
crates/mbmeta-db/src/queryables/: album.rs  artist.rs  mod.rs
crates/mbmeta-live-data-feed/: Cargo.toml
crates/mbmeta-live-data-feed/src/: dbmirror.rs  download.rs  lib.rs  replication_packet.rs  worker.rs
crates/mbmeta-meili/: Cargo.toml
crates/mbmeta-meili/src/: lib.rs
crates/mbmeta-model/: Cargo.toml
crates/mbmeta-model/src/: lib.rs
crates/mbmeta-pg-listener/: Cargo.toml
crates/mbmeta-pg-listener/src/: lib.rs
crates/mbmeta-pipeline/: Cargo.toml
crates/mbmeta-pipeline/src/: lib.rs
crates/mbmeta-settings/: Cargo.toml
crates/mbmeta-settings/src/: lib.rs
crates/mbmeta/src/: main.rs
crates/metadada/: Cargo.toml
crates/metadada-api/: Cargo.toml
crates/metadada-api/src/: album.rs  lib.rs  search.rs
crates/metadada-db/: Cargo.toml
crates/metadada-db/queries/: all_artists.sql  all_release_group.sql  unsynced_artists.sql  unsynced_release_group.sql
crates/metadada-db/src/: lib.rs
crates/metadada-db/src/indexables/: album.rs  artist.rs  mod.rs
crates/metadada-db/src/queryables/: album.rs  artist.rs  mod.rs
crates/metadada-importer/: Cargo.toml
crates/metadada-importer/src/: error.rs  lib.rs  progress.rs  tar_helper.rs
crates/metadada-importer/src/download/: github.rs  mod.rs  musicbrainz.rs
crates/metadada-importer/src/musicbrainz_db/: init.rs  mod.rs  sql_helpers.rs
crates/metadada-importer/src/musicbrainz_db/replication/: mod.rs  pending_data.rs  replication_control.rs
crates/metadada-meili/: Cargo.toml
crates/metadada-meili/src/: lib.rs
crates/metadada-pg-listener/: Cargo.toml
crates/metadada-pg-listener/src/: lib.rs
crates/metadada-pipeline/: Cargo.toml
crates/metadada-pipeline/src/: lib.rs
crates/metadada-settings/: Cargo.toml
crates/metadada-settings/src/: lib.rs
crates/metadada/src/: main.rs
docker/: Dockerfile
migrations/: 20250910080056_init.sql  20250912121018_sync_triggers.sql  20250912174019_updated_at_field_on_sync_table.sql  20250922124107_drop_replication_triggers.sql
