[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
meilisearch-sdk = "0.29.1"
config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.73"
uuid = { version = "1.18.1", features = ["serde"] }
mbmeta-settings = { path = "crates/mbmeta-settings" }
mbmeta-db = { path = "crates/mbmeta-db" }
mbmeta-meili = { path = "crates/mbmeta-meili" }
mbmeta-pipeline = { path = "crates/mbmeta-pipeline" }
mbmeta-api = { path = "crates/mbmeta-api" }
indicatif = "0.18.0"

axum = { version = "0.8.1" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa = { version = "5.3.1", features = ["macros", "axum_extras"] }
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }

clap = { version = "4.3.1", features = ["derive"] }
