[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
mbmeta-settings = { path = "crates/mbmeta-settings" }
mbmeta-db = { path = "crates/mbmeta-db" }
mbmeta-meili = { path = "crates/mbmeta-meili" }
mbmeta-pipeline = { path = "crates/mbmeta-pipeline" }
mbmeta-api = { path = "crates/mbmeta-api" }
mbmeta-pg-listener = { path = "crates/mbmeta-pg-listener" }

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.16"
futures = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid"] }
meilisearch-sdk = "0.29.1"
clap = { version = "4.3.1", features = ["derive"] }

config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.73"
uuid = { version = "1.18.1", features = ["serde"] }
indicatif = "0.18.0"
url = "2"
once_cell = "1.21.3"

axum = { version = "0.8.1" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa = { version = "5.3.1", features = ["macros", "axum_extras"] }
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
