[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
metadada-settings = { path = "crates/metadada-settings" }
metadada-db = { path = "crates/metadada-db" }
metadada-meili = { path = "crates/metadada-meili" }
metadada-pipeline = { path = "crates/metadada-pipeline" }
metadada-api = { path = "crates/metadada-api" }
metadada-pg-listener = { path = "crates/metadada-pg-listener" }
metadada-live-data-feed = { path = "crates/metadada-live-data-feed" }
metadada-importer = { path = "crates/metadada-importer" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["futures-util"] }
futures = "0.3"
futures-util = "0.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
meilisearch-sdk = "0.29.1"
clap = { version = "4.3.1", features = ["derive"] }

config = "0.15.15"
serde = { version = "1.0.219", features = ["derive"] }
csv = "1.3.1"
serde_json = "1.0.143"
anyhow = "1.0.73"
thiserror = "1"
uuid = { version = "1.18.1", features = ["serde"] }
url = "2"
once_cell = "1.21.3"
chrono = "0.4"

axum = { version = "0.8.1" }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa = { version = "5.3.1", features = ["macros", "axum_extras"] }
axum-macros = "0.5.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }

bzip2 = "0.4"
tar = "0.4"
tempfile = "3"
bytes = "1"
octocrab = "0.45.0"

indicatif = { version = "0.18", features = ["tokio"] }
tracing-indicatif = { version = "0.3.13"  }
