[package]
name = "mbmeta-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
axum-macros.workspace = true
tower.workspace = true
tower-http.workspace = true
autometrics.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
meilisearch-sdk.workspace = true
futures.workspace = true
