[package]
name = "mbmeta-db"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
mbmeta-settings.workspace = true
uuid.workspace = true
url.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

[dev-dependencies]
tokio.workspace = true
