[package]
name = "mbmeta-live-data-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
mbmeta-settings.workspace = true
futures-util.workspace = true
sqlx.workspace = true
tokio.workspace =  true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tracing.workspace = true
bzip2.workspace = true
tar.workspace = true
