[package]
name = "mbmeta-pg-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
sqlx.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
mbmeta-db.workspace = true
mbmeta-pipeline.workspace = true
