[package]
name = "mbmeta"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mbmeta-pipeline.workspace = true
mbmeta-settings.workspace = true
mbmeta-meili.workspace = true
