[package]
name = "mbmeta"
version = "0.1.0"
edition = "2024"

[dependencies]
autometrics.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mbmeta-pipeline.workspace = true
mbmeta-settings.workspace = true
mbmeta-meili.workspace = true
mbmeta-db.workspace = true
mbmeta-api.workspace = true
clap.workspace = true
axum.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
