[package]
name = "metadada"
version = "0.1.0"
edition = "2024"

[dependencies]
autometrics.workspace = true
tower-http.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metadada-pipeline.workspace = true
metadada-settings.workspace = true
metadada-meili.workspace = true
metadada-db.workspace = true
metadada-api.workspace = true
metadada-pg-listener.workspace = true
metadada-importer.workspace = true
clap.workspace = true
axum.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
